--- a/war/pom.xml
+++ b/war/pom.xml
@@ -245,12 +245,6 @@
         </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
-            <artifactId>sample-bootstrap-templates</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-            <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap-components</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
@@ -272,6 +266,18 @@
         </dependency>
 
         <!-- Templates sets -->
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>sample-bootstrap-templates</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>bootstrap-acme-space-templates</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>templates-intranet</artifactId>
@@ -296,6 +302,8 @@
             <version>2.0.0-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
+        
+        <!-- Pre-packaged demo sites -->
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acme</artifactId>
@@ -306,6 +314,13 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespace</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <type>zip</type>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jahia.prepackagedsites</groupId>
+            <artifactId>acmespaceelektra</artifactId>
             <version>2.0.0-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
