--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -82,9 +82,9 @@
     <packaging>pom</packaging>
 
     <properties>
-        <product.name>Jahia xCM</product.name>
+        <product.name>Digital Factory</product.name>
         <product.version>${project.version}</product.version>
-        <product.fullname>Jahia_xCM_v${product.version}</product.fullname>
+        <product.fullname>Jahia-DigitalFactory-Community-${product.version}</product.fullname>
         <staging.dir>${project.build.directory}/izpack</staging.dir>
     </properties>
 
@@ -266,8 +266,8 @@
                                                     txtProductVersion="${product.version}"
                                                     productName="${product.name}"
                                                     companyName="${jahia.manifest.vendor.name}"
-                                                    internalName="${installer.filename}"
-                                                    originalFilename="${installer.filename}.exe"/>
+                                                    internalName="Jahia-Digital-Factory-Community"
+                                                    originalFilename="Jahia-Digital-Factory-Community.exe"/>
                                             </config>
                                         </launch4j>
                                     </target>
@@ -284,89 +284,6 @@
                                 <version>1.4.4</version>
                             </dependency>
                         </dependencies>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>legacy-windows-installer</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.codehaus.izpack</groupId>
-                        <artifactId>izpack-maven-plugin</artifactId>
-                        <version>1.0-alpha-5</version>
-                        <dependencies>
-                            <dependency>
-                                <groupId>org.codehaus.izpack</groupId>
-                                <artifactId>izpack-standalone-compiler</artifactId>
-                                <version>${izpack.version}</version>
-                            </dependency>
-                        </dependencies>
-                        <executions>
-                            <execution>
-                                <id>standard-installer</id>
-                                <phase>prepare-package</phase>
-                                <goals>
-                                    <goal>izpack</goal>
-                                </goals>
-                                <configuration>
-                                    <attach>false</attach>
-                                    <descriptor>${basedir}/src/main/resources/izpack/install.xml</descriptor>
-                                    <installerFile>${project.build.directory}/${installer.filename}.jar</installerFile>
-                                </configuration>
-                            </execution>
-                        </executions>
-                    </plugin>
-                    <plugin>
-                        <groupId>org.bluestemsoftware.open.maven.plugin</groupId>
-                        <artifactId>launch4j-plugin</artifactId>
-                        <version>1.5.0.0-jahia1</version>
-                        <configuration>
-                            <attach>false</attach>
-                            <dontWrapJar>false</dontWrapJar>
-                            <headerType>gui</headerType>
-                            <priority>normal</priority>
-                            <downloadUrl>http://java.com/download</downloadUrl>
-                            <supportUrl>http://www.jahia.com</supportUrl>
-                            <customProcName>false</customProcName>
-                            <stayAlive>false</stayAlive>
-                            <icon>${project.build.directory}/images/jahia.ico</icon>
-                            <jre>
-                                <minVersion>1.6.0</minVersion>
-                            </jre>
-                            <splash>
-                                <file>${project.build.directory}/images/splash.bmp</file>
-                                <waitForWindow>true</waitForWindow>
-                                <timeout>60</timeout>
-                                <timeoutErr>true</timeoutErr>
-                            </splash>
-                            <versionInfo>
-                                <fileVersion>1.0.0.0</fileVersion>
-                                <txtFileVersion>${product.version}</txtFileVersion>
-                                <fileDescription>${product.name} Windows Installer</fileDescription>
-                                <copyright>${jahia.manifest.vendor.name} (${jahia.manifest.vendor.url})</copyright>
-                                <productVersion>1.0.0.0</productVersion>
-                                <txtProductVersion>${product.version}</txtProductVersion>
-                                <productName>${product.name}</productName>
-                                <companyName>${jahia.manifest.vendor.name}</companyName>
-                                <internalName>${installer.filename}.jar</internalName>
-                                <originalFilename>${installer.filename}.exe</originalFilename>
-                            </versionInfo>
-                        </configuration>
-                        <executions>
-                            <execution>
-                                <id>l4j-ui</id>
-                                <phase>package</phase>
-                                <goals>
-                                    <goal>launch4j</goal>
-                                </goals>
-                                <configuration>
-                                    <jar>${project.build.directory}/${installer.filename}.jar</jar>
-                                    <outfile>${project.build.directory}/${installer.filename}.exe</outfile>
-                                </configuration>
-                            </execution>
-                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -530,7 +447,7 @@
                         <configuration>
                             <target>
                                 <loadfile property="buildNumber-ce" srcFile="${project.build.directory}/marker/META-INF/jahia-impl-marker.txt" />
-                                <echo message="installer.filename=${product.fullname}_r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
+                                <echo message="installer.filename=${product.fullname}-r${buildNumber-ce}" file="${project.build.directory}/version.properties" />
                             </target>
                         </configuration>
                     </execution>
