QA-5428 - Product naming change - Installer
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@910 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -260,14 +260,14 @@
                                                 <versionInfo
                                                     fileVersion="7.0.0.0"
                                                     txtFileVersion="${product.version}"
-                                                    fileDescription="${product.name} Windows Installer"
+                                                    fileDescription="${product.name} - Community Distribution - Windows Installer"
                                                     copyright="Copyright 2002-${year} ${jahia.manifest.vendor.name}"
                                                     productVersion="7.0.0.0"
                                                     txtProductVersion="${product.version}"
-                                                    productName="${product.name}"
+                                                    productName="${product.name} - Community Distribution"
                                                     companyName="${jahia.manifest.vendor.name}"
-                                                    internalName="Jahia-Digital-Factory-Community"
-                                                    originalFilename="Jahia-Digital-Factory-Community.exe"/>
+                                                    internalName="Jahia-DigitalFactory-Community"
+                                                    originalFilename="Jahia-DigitalFactory-Community.exe"/>
                                             </config>
                                         </launch4j>
                                     </target>
