--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -74,7 +74,7 @@
     <parent>
         <groupId>org.jahia.server</groupId>
         <artifactId>jahia-package</artifactId>
-        <version>7.0.0.0-SNAPSHOT</version>
+        <version>7.0.0.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jahia-installer-package</artifactId>
@@ -236,38 +236,15 @@
                                 <configuration>
                                     <target>
                                         <path id="launch4j_classpath">
-                                            <pathelement location="${project.build.directory}/artifacts/launch4j/launch4j.jar"/>
+                                            <pathelement location="${project.build.directory}/artifacts/launch4j/launch4j.jar" />
                                         </path>
-                                        <chmod dir="${project.build.directory}/artifacts/launch4j/bin" perm="755" includes="**"/>
-                                        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpathref="launch4j_classpath"/>
+                                        <chmod dir="${project.build.directory}/artifacts/launch4j/bin" perm="755" includes="**" />
+                                        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpathref="launch4j_classpath" />
                                         <launch4j>
-                                            <config
-                                                outfile="${project.build.directory}/${installer.filename}.exe"
-                                                jarPath="${project.build.directory}/${installer.filename}.jar"
-                                                dontWrapJar="false"
-                                                headerType="gui"
-                                                priority="normal"
-                                                downloadUrl="http://java.com/download"
-                                                supportUrl="http://www.jahia.com"
-                                                stayAlive="false"
-                                                icon="${project.build.directory}/images/jahia.ico">
-                                                <jre minVersion="1.6.0"/>
-                                                <splash
-                                                    file="${project.build.directory}/images/splash.bmp"
-                                                    waitForWindow="true"
-                                                    timeout="60"
-                                                    timeoutErr="true"/>
-                                                <versionInfo
-                                                    fileVersion="7.0.0.0"
-                                                    txtFileVersion="${product.version}"
-                                                    fileDescription="${product.name} - Community Distribution - Windows Installer"
-                                                    copyright="Copyright 2002-${year} ${jahia.manifest.vendor.name}"
-                                                    productVersion="7.0.0.0"
-                                                    txtProductVersion="${product.version}"
-                                                    productName="${product.name} - Community Distribution"
-                                                    companyName="${jahia.manifest.vendor.name}"
-                                                    internalName="DigitalFactory-CommunityDistribution"
-                                                    originalFilename="DigitalFactory-CommunityDistribution.exe"/>
+                                            <config outfile="${project.build.directory}/${installer.filename}.exe" jarPath="${project.build.directory}/${installer.filename}.jar" dontWrapJar="false" headerType="gui" priority="normal" downloadUrl="http://java.com/download" supportUrl="http://www.jahia.com" stayAlive="false" icon="${project.build.directory}/images/jahia.ico">
+                                                <jre minVersion="1.6.0" />
+                                                <splash file="${project.build.directory}/images/splash.bmp" waitForWindow="true" timeout="60" timeoutErr="true" />
+                                                <versionInfo fileVersion="7.0.0.0" txtFileVersion="${product.version}" fileDescription="${product.name} - Community Distribution - Windows Installer" copyright="Copyright 2002-${year} ${jahia.manifest.vendor.name}" productVersion="7.0.0.0" txtProductVersion="${product.version}" productName="${product.name} - Community Distribution" companyName="${jahia.manifest.vendor.name}" internalName="DigitalFactory-CommunityDistribution" originalFilename="DigitalFactory-CommunityDistribution.exe" />
                                             </config>
                                         </launch4j>
                                     </target>
