--- a/war/pom.xml
+++ b/war/pom.xml
@@ -297,7 +297,7 @@
         <dependency>
             <groupId>org.jahia.prepackagedsites</groupId>
             <artifactId>acmespaceelektra</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <type>zip</type>
             <scope>runtime</scope>
         </dependency>
