--- a/war/pom.xml
+++ b/war/pom.xml
@@ -266,7 +266,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>bootstrap</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 		<!-- end of Jahia Forge Modules -->
