--- a/package/jdbc-drivers/pom.xml
+++ b/package/jdbc-drivers/pom.xml
@@ -87,6 +87,7 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>${driver.mysql.version}</version>
+            <classifier>nofabric</classifier>
         </dependency>
         <dependency>
             <groupId>org.apache.derby</groupId>
