--- a/war/pom.xml
+++ b/war/pom.xml
@@ -104,7 +104,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>contact</artifactId>
-            <version>2.0.1-SNAPSHOT</version>
+            <version>2.0.0</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
