launch4j (executable installer wrapper tool) upgrade to 3.4
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@976 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -208,7 +208,7 @@
                                         <artifactItem>
                                             <groupId>net.sf.launch4j</groupId>
                                             <artifactId>launch4j-package</artifactId>
-                                            <version>3.1.0-beta2</version>
+                                            <version>${launch4j.version}</version>
                                             <type>zip</type>
                                             <overWrite>false</overWrite>
                                             <outputDirectory>${project.build.directory}/artifacts/launch4j</outputDirectory>
@@ -216,7 +216,7 @@
                                         <artifactItem>
                                             <groupId>net.sf.launch4j</groupId>
                                             <artifactId>launch4j-bin</artifactId>
-                                            <version>3.1.0-beta2</version>
+                                            <version>${launch4j.version}</version>
                                             <classifier>${os.family}</classifier>
                                             <type>zip</type>
                                             <overWrite>false</overWrite>
