--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -288,6 +288,20 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>sign-installer-jar</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-jarsigner-plugin</artifactId>
+                        <configuration>
+                            <archive>${project.build.directory}/${installer.filename}.jar</archive>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 
     <build>
@@ -540,7 +554,7 @@
                 <executions>
                     <execution>
                         <id>standard-installer</id>
-                        <phase>install</phase>
+                        <phase>package</phase>
                         <goals>
                             <goal>izpack</goal>
                         </goals>
