--- a/dm-package/pom.xml
+++ b/dm-package/pom.xml
@@ -115,7 +115,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>gateway</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.1-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
     </dependencies>
