--- a/dm-package/pom.xml
+++ b/dm-package/pom.xml
@@ -182,7 +182,7 @@
         								</goals>
         							</pluginExecutionFilter>
         							<action>
-        								<ignore></ignore>
+        								<ignore />
         							</action>
         						</pluginExecution>
         					</pluginExecutions>
