BACKLOG-5115 - Ported all changes, related to the externalization of the data and configuration, to community installer (merged from jahia_pack/branches/JAHIA-7-0-X-X-BRANCH revision 1033)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1034 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/src/main/resources/izpack/install.properties
+++ b/package/jahia-installer-package/src/main/resources/izpack/install.properties
@@ -4,8 +4,6 @@ databaseType=${dbSettings.dbms.type}
 databaseUrl=${dbSettings.connection.url}
 databaseUsername=${dbSettings.connection.username}
 db_script=${dbSettings.dbms.type}.script
-externalizedConfigActivated=${externalizedConfigActivated}
-externalizedConfigClassifier=${externalizedConfigClassifier}
 externalizedConfigTargetPath=${externalizedConfigTargetPath}
 jahiaRootEmail=${superUser.email}
 jahiaRootFirstname=${superUser.firstname}
@@ -15,6 +13,7 @@ jahiaRootPreferredLang=${superUser.preferredLang}
 jahiaRootUsername=${superUser.username}
 jahiaToolManagerPassword=${jahiaManager.password}
 jahiaToolManagerUsername=${jahiaManager.username}
+jahiaVarDiskPath=${jahiaVarDiskPath}
 mailAdministrator=${mailSettings.administrator}
 mailFrom=${mailSettings.from}
 mailServer=${mailSettings.server}
