--- a/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
+++ b/package/jahia-installer-package/src/main/resources/tomcat/conf/catalina.properties
@@ -46,7 +46,7 @@ org.apache.jasper.,org.apache.naming.,org.apache.tomcat.
 #     "foo/*.jar": Add all the JARs of the specified folder as class
 #                  repositories
 #     "foo/bar.jar": Add bar.jar as a class repository
-common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar
+common.loader=${catalina.base}/lib,${catalina.base}/lib/*.jar,${catalina.home}/lib,${catalina.home}/lib/*.jar,%{tomcat.common.loader}
 
 #
 # List of comma-separated paths defining the contents of the "server"
