BACKLOG-4729 : add external provider for user and groups
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1072 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -273,6 +273,14 @@
         </dependency>
 		<!-- end of Jahia Forge Modules -->
 
+         <!-- external user/group provider -->
+         <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>external-provider-users-groups</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
+        
          <!-- LDAP -->
         <dependency>
             <groupId>org.jahia.modules</groupId>
