add users and groups bridge provider to additional modules in jahia_pack
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1076 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/additional-modules/pom.xml
+++ b/additional-modules/pom.xml
@@ -273,7 +273,13 @@
         </dependency>
 		<!-- end of Jahia Forge Modules -->
         
-         <!-- LDAP -->
+         <!-- Users and groups provider modules -->
+        <dependency>
+            <groupId>org.jahia.modules</groupId>
+            <artifactId>users-groups-bridge-provider</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>runtime</scope>
+        </dependency>
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ldap</artifactId>
