Rollback all changes on dependencies (from 7.0.x.x branch)
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1094 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/core-modules/pom.xml
+++ b/core-modules/pom.xml
@@ -274,7 +274,7 @@
         <dependency>
             <groupId>org.jahia.modules</groupId>
             <artifactId>ckeditor</artifactId>
-            <version>4.4.4</version>
+            <version>4.4.4-SNAPSHOT</version>
             <scope>runtime</scope>
         </dependency>
 	</dependencies>
