Escape single quote in the signing certificate alias
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1122 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -296,7 +296,7 @@
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-jarsigner-plugin</artifactId>
                         <configuration>
-                            <alias>jahia solutions group sa\'s godaddy.com, inc. id</alias>
+                            <alias>jahia solutions group sa'\''s godaddy.com, inc. id</alias>
                         </configuration>
                     </plugin>
                 </plugins>
