QA-6496 - Integrate JAR/EXE signing with a software publisher certificate into a release process
Added executable permissions on the sign4j

git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1126 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/jahia-installer-package/pom.xml
+++ b/package/jahia-installer-package/pom.xml
@@ -350,6 +350,7 @@
                                 <phase>package</phase>
                                 <configuration>
                                     <target>
+                                        <chmod file="${project.build.directory}/sign4j/${sign4j.executable}" perm="ugo+rx" />
                                         <exec executable="${project.build.directory}/sign4j/${sign4j.executable}">
                                             <arg
                                                 line="java -jar ${project.build.directory}/artifacts/jsign/jsign.jar --storetype PKCS12 --keystore ${jahia.sign.keystore} --storepass ${jahia.sign.storepass} --alias jahia --tsaurl http://tsa.starfieldtech.com/ ${project.build.directory}/${installer.filename}.exe" />
