Add jahia-packages-parent as submodule
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1228 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/package/pom.xml
+++ b/package/pom.xml
@@ -94,5 +94,6 @@
     <modules>
         <module>jdbc-drivers</module>
         <module>shared-libraries</module>
+        <module>jahia-packages-parent</module>
     </modules>
 </project>
