Fix pom after adding jahia-packages-parent project
git-svn-id: https://devtools.jahia.com/svn/jahia_pack/trunk@1232 39555585-ee67-472c-bf1e-947fb1f6b7c6

--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,7 @@
         <module>core-modules</module>
         <module>additional-modules</module>
         <module>package</module>
+        <module>jahia-packages-parent</module>
     </modules>
 
 </project>
